<resources>
    <string name="app_name">PetBook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sem_consultas_cadastradas">Sem consultas cadastradas</string>
    <string name="nome_do_pet">Nome do pet</string>
    <string name="digite_o_nome_do_animal">Digite o nome do animal</string>
    <string name="digite_o_nome_da_cl_nica">Digite o nome da clínica</string>
    <string name="tipo_de_atendimento">Tipo de atendimento</string>
    <string name="nome_da_cl_nica">Nome da clínica</string>
    <string name="data_do_atendimento">Data do atendimento</string>
    <string name="descreva_os_procedimentos_realizados">Descreva os procedimentos realizados</string>
    <string name="descri_o_do_atendimento">Descrição do atendimento</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="consultas_cadastradas">Consultas cadastradas</string>
    <string name="criar_consulta">Criar Consulta</string>
    <string name="editar_consulta">Editar Consulta</string>
    <string name="s_consultas">Só Consultas</string>
    <string name="s_vacinas">Só vacinas</string>
    <string name="s_cirurgias">Só Cirurgias</string>
    <string name="s_emerg_ncias">Só Emergências</string>
    <string name="s_check_ups">Só Check-ups</string>
    <string-array name="tipos_consultas">
        <item>Consulta</item>
        <item>Vacinação</item>
        <item>Check-up</item>
        <item>Cirurgia</item>
        <item>Emergência</item>
    </string-array>
</resources>