<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/listaConsultasFragment">
    <fragment
        android:id="@+id/listaConsultasFragment"
        android:name="br.edu.ifsp.scl.sdm.petbook.ui.ListaConsultasFragment"
        android:label="@string/consultas_cadastradas"
        tools:layout="@layout/fragment_lista_consultas" >
        <action
            android:id="@+id/action_listaConsultasFragment_to_cadastroFragment"
            app:destination="@id/cadastroFragment" />
        <action
            android:id="@+id/action_listaConsultasFragment_to_detalheFragment"
            app:destination="@id/detalheFragment" />
    </fragment>
    <fragment
        android:id="@+id/cadastroFragment"
        android:name="br.edu.ifsp.scl.sdm.petbook.ui.CadastroFragment"
        android:label="@string/criar_consulta"
        tools:layout="@layout/fragment_cadastro" />
    <fragment
        android:id="@+id/detalheFragment"
        android:name="br.edu.ifsp.scl.sdm.petbook.ui.DetalheFragment"
        android:label="@string/editar_consulta"
        tools:layout="@layout/fragment_detalhe" />
</navigation>
